# claude-plasmoid

./: .qmlls.ini  Cargo.toml  README.md  build.rs  install.sh  plugin.version
package/: metadata.json
package/contents/ui/: main.qml
src/: bridge.rs  kwallet.rs  lib.rs
